# ollama

./: dune-project  ollama.opam
lib/: dune  ollama.ml
